Wed May 24 23:30:02 2000  Owen Taylor  <otaylor@redhat.com>

	* process.c (mp_process_finalize): Add a finalize
	function.

Wed May 24 23:18:12 2000  Owen Taylor  <otaylor@redhat.com>

	* process.c (mp_process_init): 
	* server.c (mp_server_init):

	Ref and sink objects to make them strictly reference
	counted.

Wed May 24 05:26:18 2000  Owen Taylor  <otaylor@redhat.com>

        * tree.c main.c: Always confirm when killing or
	detaching from a process.
	
	* main.c (run_file): When running a new process, and we
	have an existing process, create a new window for the
	new process.

	* main.c: Add a SIGCHLD handler so we don't have to
	worry about waiting for processes we've detached from.

Wed May 24 04:22:28 2000  Owen Taylor  <otaylor@redhat.com>

	* main.c gui.h (process_window_maybe_kill) process.[ch]
	  (process_kill): Add functions for killing processes.

	* memprof.glade main.c: Menu reorganization, replace detach
	toolbar item with kill.

Wed Jan 12 10:42:35 2000  Owen Taylor  <otaylor@redhat.com>

	* configure.in (MEMPROF_LIBS): Link against -lbfd and
	-liberty statically, since the so's change with every
	release of binutils.

	* testmemprof.c: Make a bit more interesting.

Tue May 23 20:06:57 2000  Owen Taylor  <otaylor@redhat.com>

        * process.c main.c memprof.glade: Start of support for detaching from
	running or exited processes.

	* tree.c main.c gui.h: Add popup menu to tree for show/hide/detach.

Tue May 23 18:47:54 2000  Owen Taylor  <otaylor@redhat.com>

	* memintercept.c: Avoid overwriting errno.

Tue May 23 16:40:17 2000  Owen Taylor  <otaylor@redhat.com>

	* process.[ch]: Add functions to get the command line and 
	status of the process.

	* Makefile.am tree.c gui.h memprof.glade: Add tree window to display
	all current traced processes.

Tue May 23 14:19:44 2000  Owen Taylor  <otaylor@redhat.com>

	* server.[ch] process.[ch]: Add process and server GtkObject's
	with signals for process creation, status changes, exit.
