@@ -28,89 +28,83 @@ static const char *program_name = "memprof";
 void
 bfd_nonfatal (const char *string)
 {
-  const char *errmsg = bfd_errmsg (bfd_get_error ());
+	const char *errmsg = bfd_errmsg (bfd_get_error ());
 
-  if (string)
-    fprintf (stderr, "%s: %s: %s\n", program_name, string, errmsg);
-  else
-    fprintf (stderr, "%s: %s\n", program_name, errmsg);
+	if (string)
+		fprintf (stderr, "%s: %s: %s\n", program_name, string, errmsg);
+	else
+		fprintf (stderr, "%s: %s\n", program_name, errmsg);
 }
 
 void
 bfd_fatal (const char *string)
 {
-  bfd_nonfatal (string);
-  exit (1);
+	bfd_nonfatal (string);
+	exit (1);
 }
 
 static asymbol **
 slurp_symtab (bfd *abfd, long *symcount)
 {
-  asymbol **sy = (asymbol **) NULL;
-  long storage;
+	asymbol **sy = (asymbol **) NULL;
+	long storage;
 
-  if (!(bfd_get_file_flags (abfd) & HAS_SYMS))
-    {
-      printf ("No symbols in \"%s\".\n", bfd_get_filename (abfd));
-      *symcount = 0;
-      return NULL;
-    }
+	if (!(bfd_get_file_flags (abfd) & HAS_SYMS)) {
+		printf ("No symbols in \"%s\".\n", bfd_get_filename (abfd));
+		*symcount = 0;
+		return NULL;
+	}
 
-  storage = bfd_get_symtab_upper_bound (abfd);
-  if (storage < 0)
-    bfd_fatal (bfd_get_filename (abfd));
+	storage = bfd_get_symtab_upper_bound (abfd);
+	if (storage < 0)
+		bfd_fatal (bfd_get_filename (abfd));
 
-  if (storage)
-    {
-      sy = (asymbol **) malloc (storage);
-    }
-  *symcount = bfd_canonicalize_symtab (abfd, sy);
-  if (*symcount < 0)
-    bfd_fatal (bfd_get_filename (abfd));
-  if (*symcount == 0)
-    fprintf (stderr, "%s: %s: No symbols\n",
-             program_name, bfd_get_filename (abfd));
-  return sy;
+	if (storage) {
+		sy = (asymbol **) malloc (storage);
+	}
+	*symcount = bfd_canonicalize_symtab (abfd, sy);
+	if (*symcount < 0)
+		bfd_fatal (bfd_get_filename (abfd));
+	if (*symcount == 0)
+		fprintf (stderr, "%s: %s: No symbols\n",
+			 program_name, bfd_get_filename (abfd));
+	return sy;
 }
 
 gboolean
 read_bfd (Map *map)
 {
-  asection *section;
+	asection *section;
 
-  map->abfd = bfd_openr (map->name, NULL);
-  if (map->abfd == NULL)
-    {
-      bfd_nonfatal (map->name);
-      return FALSE;
-    }
+	map->abfd = bfd_openr (map->name, NULL);
+	if (map->abfd == NULL) {
+		bfd_nonfatal (map->name);
+		return FALSE;
+	}
 
-  if (!bfd_check_format (map->abfd, bfd_object))
-    {
-      bfd_nonfatal (bfd_get_filename (map->abfd));
-      return FALSE;
-    }
+	if (!bfd_check_format (map->abfd, bfd_object)) {
+		bfd_nonfatal (bfd_get_filename (map->abfd));
+		return FALSE;
+	}
 
-  map->syms = slurp_symtab (map->abfd, &map->symcount);
-  if (!map->syms)
-    return FALSE;
+	map->syms = slurp_symtab (map->abfd, &map->symcount);
+	if (!map->syms)
+		return FALSE;
 
-  for (section = map->abfd->sections; section; section = section->next)
-    {
-      if (strcmp (section->name, ".text") == 0)
-	break;
-    }
+	for (section = map->abfd->sections; section; section = section->next) {
+		if (strcmp (section->name, ".text") == 0)
+			break;
+	}
 
-  if (!section)
-    {
-      fprintf (stderr, "%s: %s: %s\n", program_name, map->name,
-	       ".text section not found");
-      return FALSE;
-    }
+	if (!section) {
+		fprintf (stderr, "%s: %s: %s\n", program_name, map->name,
+			 ".text section not found");
+		return FALSE;
+	}
 
-  map->section = section;
+	map->section = section;
 
-  return TRUE;
+	return TRUE;
 }
 
 extern char *cplus_demangle (const char *mangled, int options);
@@ -121,13 +115,13 @@ extern char *cplus_demangle (const char *mangled, int options);
 char *
 demangle (Map *map, const char *name)
 {
-  char *demangled;
+	char *demangled;
 	
-  if (bfd_get_symbol_leading_char (map->abfd) == *name)
-    ++name;
+	if (bfd_get_symbol_leading_char (map->abfd) == *name)
+		++name;
 
-  demangled = cplus_demangle (name, DMGL_ANSI | DMGL_PARAMS);
-  return demangled ? demangled : strdup (name);
+	demangled = cplus_demangle (name, DMGL_ANSI | DMGL_PARAMS);
+	return demangled ? demangled : strdup (name);
 }
 
 gboolean 
@@ -135,44 +129,41 @@ find_line (Map *map, bfd_vma addr,
 	   const char **filename, char **functionname,
 	   unsigned int *line)
 {
-  const char *name;
+	const char *name;
   
-  if (!map->abfd || !map->syms)
-    return FALSE;                  
+	if (!map->abfd || !map->syms)
+		return FALSE;                  
 
-  if (bfd_find_nearest_line (map->abfd, map->section, map->syms,
-			     addr - map->section->vma, 
-			     filename, &name, line))
-    {
-      *functionname = demangle (map, name);
+	if (bfd_find_nearest_line (map->abfd, map->section, map->syms,
+				   addr - map->section->vma, 
+				   filename, &name, line) &&
+	    name != NULL) {
+		*functionname = demangle (map, name);
 
-      return TRUE;
-    }
-  else
-    return FALSE;
+		return TRUE;
+	} else
+		return FALSE;
 
 }
 
 void 
 process_map_sections (Map *map, SectionFunc func, gpointer user_data)
 {
-  asection *section;
+	asection *section;
 
-  if (map->abfd)
-    for (section = map->abfd->sections; section; section = section->next)
-      {
-	if (strcmp (section->name, ".bss") == 0 ||
-	    strcmp (section->name, ".data") == 0)
-	  {
-	    void *addr = (void *)section->vma;
-	    if (map->do_offset)
-	      addr += map->addr;
+	if (map->abfd)
+		for (section = map->abfd->sections; section; section = section->next) {
+			if (strcmp (section->name, ".bss") == 0 ||
+			    strcmp (section->name, ".data") == 0) {
+				void *addr = (void *)section->vma;
+				if (map->do_offset)
+					addr += map->addr;
 	    
-	    /* bfd_section_size() gives 0 for old versions of binutils, so peek
-	     * into the internals instead. :-(
-	     */
-	    /* (*func) (addr, bfd_section_size (map->abfd, section), user_data); */
-	    (*func) (addr, section->_cooked_size, user_data);
-	  }
-      }
+				/* bfd_section_size() gives 0 for old versions of binutils, so peek
+				 * into the internals instead. :-(
+				 */
+				/* (*func) (addr, bfd_section_size (map->abfd, section), user_data); */
+				(*func) (addr, section->_cooked_size, user_data);
+			}
+		}
 }
