@@ -1,3 +1,14 @@
+Fri May 26 12:55:35 2000  Owen Taylor  <otaylor@redhat.com>
+
+	* bfdutils.c (find_line): For a sufficiently screwed up
+	object file, bfd_find_nearest_line can return TRUE but
+	leave name NULL. Account for this.
+
+	* bfdutils.c: Reindent.
+
+	* process.c (process_exec_reset): Fix problem where
+	signal was being emitted on finalize.
+
 Wed May 24 23:30:02 2000  Owen Taylor  <otaylor@redhat.com>
 
 	* process.c (mp_process_finalize): Add a finalize
